samples/_failures_safe/1761795873_923c4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d60d8fc.c: In function ‘main’:
./samples/SAFE/__tmp_0d60d8fc.c:163:13: error: expected declaration or statement at end of input
  163 |             running = 0;
      |             ^~~~~~~
./samples/SAFE/__tmp_0d60d8fc.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0d60d8fc.c:163:13: error: expected declaration or statement at end of input
